--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.8.1
 Django==5.0.3
 djangorestframework==3.15.1
+flake8==7.0.0
+mccabe==0.7.0
 pdfkit==1.0.0
+pycodestyle==2.11.1
+pyflakes==3.2.0
 pypng==0.20220715.0
 qrcode==7.4.2
 sqlparse==0.4.4
